--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,130 +1,316 @@
     * {
-        margin: 0;
         padding: 0;
+        margin: 0;
+        font-size: 1rem;
     }
     
     body {
-        width: 100%;
-        line-height: 25px;
         font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     
     .wrapper {
         position: relative;
+        width: 100%;
+        height: 100vh;
     }
     /* Sidebar */
     
     .wrapper .sidebar {
-        width: 23%;
-        height: 100%;
         position: fixed;
-        background-color: aliceblue;
+        width: 20%;
         text-align: center;
     }
     
-    .wrapper .sidebar img {
-        height: 15vh;
-        border: rgb(228, 199, 199) 3px solid;
-        border-radius: 100%;
-        margin-bottom: 10px;
-        margin-top: 30px;
-        /* margin-left: 35%; */
+    .sidebar img {
+        width: 100px;
+        border-radius: 50%;
+        border: 2px solid hsl(24, 100%, 50%);
+        margin-top: 5%;
     }
     
-    .wrapper.sidebar h2,
-    h2,
+    .sidebar h2,
     h4 {
         line-height: 35px;
-        /* text-align: center; */
+    }
+    
+    .sidebar h2 {
+        padding-top: 5%;
     }
     
     .sidebar h4 {
-        color: rgba(131, 123, 123, 0.4);
-        margin-bottom: 40px;
+        font-size: 0.7rem;
+        color: rgba(0, 0, 0, 0.4);
     }
     
     .sidebar ul {
-        position: relative;
-        height: 100%;
+        /* background-color: rgb(107, 111, 122); */
+        padding-top: 15%;
     }
     
     .sidebar ul li {
-        list-style: none;
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-        border-top: 1px solid rgba(49, 36, 36, 0.1);
+    }
+    
+    .sidebar ul li {
         padding: 15px 0px 15px 0px;
     }
     
     .sidebar ul li a {
-        text-decoration: none;
         color: black;
-        font-size: medium;
-        font-weight: 550;
+        font-weight: 600;
+        text-decoration: none;
     }
     
     .sidebar ul li:hover {
-        background-color: rgba(0, 0, 0, 0.2);
-        border-right: 3px solid #f86045;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-right: 3px solid hsl(24, 100%, 50%);
+        ;
     }
     
     .sidebar ul li a:active {
-        color: rgba(54, 50, 50, 0.5);
-        animation-delay: 6ms;
+        color: orangered;
     }
-    /* Home */
+    
+    .sidebar .social-media {
+        padding-top: 7%;
+    }
+    
+    .sidebar .social-media i {
+        font-size: large;
+        width: 30px;
+        background-color: rgba(0, 0, 0, 0.1);
+        color: rgba(0, 0, 0, 0.4);
+        border-radius: 10%;
+        margin-left: 2%;
+    }
+    
+    .social-media i:hover {
+        transform: rotate(360deg);
+        transition: 1s;
+    }
+    /* home */
     
     .wrapper .home {
-        width: 100%;
-        margin-left: 24.5%;
+        position: relative;
+        width: 78%;
         height: 100vh;
-        position: fixed;
-        background-image: url(/assets/images/home_page_bg_2.jpeg);
+        margin-left: 20%;
     }
     
     .home .shadow {
+        width: 2%;
+        height: 235vh;
         background-color: rgba(0, 0, 0, 0.1);
         position: absolute;
-        height: 100vh;
-        margin-left: -1.5%;
-        width: 1.5%;
     }
     
-    .wrapper .home .home-items {
-        height: 100vh;
-        background-color: rgba(0, 0, 0, 0.4);
+    .home .home-items {
+        padding-left: 14px;
+        padding-top: 2%;
     }
     
-    .wrapper .home p,
-    h3 {
-        text-align: center;
-        padding-right: 23%;
-        color: whitesmoke;
-    }
-    
-    .home-items p {
-        padding-top: 10%;
-        margin-bottom: 30px;
-        font-size: 40px;
-        font-weight: 700;
-    }
-    
-    .home-items h3 {
-        color: rgba(238, 220, 220, 0.4);
-        margin-bottom: 2%;
-    }
-    /*.home-items ul {
-        background-color: rgb(46, 46, 33);
-    }*/
-    
-    .home-items ul li {
-        color: whitesmoke;
-        padding: 20px 0px 20px 31%;
-        font-size: large;
-        list-style: none;
-    }
-    
-    ul li span {
-        border-bottom: 4px solid #f86045;
-        margin-right: 2%;
+    .home .home-items i {
+        background-color: hsl(24, 100%, 50%);
+        position: absolute;
+        font-size: 32px;
         font-weight: 600;
+        color: seashell;
+        width: 250px;
+        height: 50px;
+        text-align: right;
+        padding-right: 50px;
+        padding-top: 20px;
+        border-top-left-radius: 20px;
+    }
+    
+    .home-items i:before {
+        content: " ";
+        position: absolute;
+        width: 10px;
+        height: 30px;
+        background-color: hsl(24, 100%, 30%);
+        left: 0px;
+        top: 100%;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        z-index: 2;
+    }
+    
+    .home-items i::after {
+        content: " ";
+        position: absolute;
+        width: 10px;
+        height: 15px;
+        background-color: hsl(24, 100%, 50%);
+        left: 0px;
+        top: 100%;
+    }
+    
+    .home-items span {
+        position: absolute;
+        margin: 28% 0 0 28%;
+        margin-top: 2.5%;
+        color: rgba(0, 0, 0, 0.4);
+        font-weight: 600;
+    }
+    
+    .home .menu {
+        position: relative;
+        display: flex;
+        width: 100%;
+        height: auto;
+        margin: 12% 0 0 2%;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .home .menu>div {
+        height: auto;
+        width: 8%;
+        border: 3px solid rgba(255, 242, 179, 0.4);
+    }
+    
+    .menu .back_ground {
+        background-color: hsl(24, 100%, 50%);
+    }
+    
+    .menu>div a {
+        text-decoration: none;
+        color: black;
+    }
+    
+    .home .list_item {
+        width: 85%;
+        height: auto;
+        display: flex;
+        position: relative;
+        flex-wrap: wrap;
+        margin: 3% 0 0 10%;
+    }
+    
+    .list_item>div {
+        width: 25%;
+        flex-grow: 1;
+        padding: 0;
+        margin: 1.25% 1.5%;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    }
+    
+    .list_item>div:hover {
+        transform: scale(1.05);
+        transition: 0.2s;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+    
+    .list_item>div img {
+        width: 100%;
+        border-bottom: 3px solid hsl(24, 100%, 50%);
+    }
+    
+    @media screen and (max-width: 768px) {
+        * {
+            font-size: 0.8rem;
+        }
+        .sidebar img {
+            width: 60px;
+        }
+        .sidebar h2,
+        h4 {
+            line-height: 20px;
+        }
+        .sidebar h2 {
+            padding-top: 7%;
+        }
+        .sidebar ul li {
+            padding: 7px 0px 7px 0px;
+        }
+        .sidebar .social-media i {
+            font-size: 8px;
+            width: 9px;
+        }
+        .home .shadow {
+            height: 240vh;
+        }
+        .home .home-items {
+            margin-left: -3%;
+        }
+        .home .home-items i {
+            font-size: 10px;
+            width: 40px;
+            height: 12px;
+            padding: 10px 20px 10px 40px;
+            border-top-left-radius: 3px;
+        }
+        .home-items i:before {
+            width: 7px;
+            height: 15px;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+        .home-items i::after {
+            width: 7px;
+            height: 5px;
+            left: 0px;
+            top: 100%;
+        }
+        .list_item>div {
+            width: 40%;
+        }
+    }
+    
+    @media screen and (max-width: 426px) {
+        * {
+            font-size: 0.6rem;
+        }
+        .sidebar img {
+            width: 40px;
+        }
+        .sidebar h2,
+        h4 {
+            line-height: 13px;
+        }
+        /*side bar*/
+        .sidebar h2 {
+            padding-top: 5%;
+        }
+        .sidebar ul li {
+            padding: 7px 0px 7px 0px;
+        }
+        .sidebar .social-media i {
+            font-size: 8px;
+            width: 9px;
+        }
+        .home .shadow {
+            height: 560vh;
+        }
+        .home .home-items {
+            padding-left: 14px;
+            padding-top: 2%;
+        }
+        .home .home-items {
+            margin-left: -3%;
+        }
+        .home .home-items i {
+            font-size: 10px;
+            width: 40px;
+            height: 12px;
+            padding: 10px 20px 10px 40px;
+            border-top-left-radius: 3px;
+        }
+        .home-items i:before {
+            width: 7px;
+            height: 15px;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+        .home-items i::after {
+            width: 7px;
+            height: 5px;
+            left: 0px;
+            top: 100%;
+        }
+        .list_item>div {
+            width: 100%;
+        }
     }
